--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <script src="/BidStory/js/tools.js"></script>
     <script src="/BidStory/code/lang/imageAndLang.js"></script>
+        <script src="/BidStory/js/mes.js"></script>
+
     <script src="/BidStory/js/dataBase/dbManager.js"></script>
     <script src="/BidStory/js/table/table.js"></script>
         <script src="/BidStory/js/print.js"></script>
