--- a/pages/projects/print.html
+++ b/pages/projects/print.html
@@ -41,7 +41,7 @@
         allProcessData = await getSingleProcessData( selectedProject );
         if ( allProcessData )
         {
-            console.log( allProcessData.items );
+            console.log( allProcessData );
         }
         Swal.close();
     }
